<resources>
    <string name="app_name">Pet Clinic</string>
    <string name="kitten">kitten</string>
    <string name="services">Description</string>
    <string name="servicesVal">Our Services:\n - wellness care\n - vaccinations
        \n - dental care\n - surgery\n - spay and neuter\n - diagnostics
        \n - dermatology\n - emergency care</string>
    <string name="address">Contact</string>
    <string name="addressVal">Phone Number:\n\t (408) 238-0690\n
        \nAddress:\n\t 1611 E Capitol Expy., Ste 204\n\t San Jose, CA 95121</string>
    <string name="hours">Hours</string>
    <string name="hoursVal1">Mon:\nTue:\nWed:\nThu:\nFri:\nSat:\nSun:</string>
    <string name="hoursVal2">8:00 AM – 8:00 PM\n8:00 AM – 8:00 PM\n8:00 AM – 8:00 PM
        \n8:00 AM – 8:00 PM\n8:00 AM – 8:00 PM\n8:00 AM – 6:00 PM\n9:00 AM – 6:00 PM</string>
</resources>
