<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="false">

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="36sp"
        android:textStyle="bold"
        android:padding="20dp"
        android:textColor="@color/colorPrimary"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"/>

    <ImageView
        android:id="@+id/image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/kitten"
        android:src="@drawable/kitten"
        android:layout_below="@id/name"
        android:padding="15dp"
        android:adjustViewBounds="true"/>

    <TextView
        android:id="@+id/hours"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hours"
        android:padding="10dp"
        android:textSize="20sp"
        android:clickable="true"
        android:focusable="true"
        android:onClick="onHours"
        android:layout_below="@id/image"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/services"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:onClick="onService"
        android:padding="10dp"
        android:text="@string/services"
        android:textSize="20sp"
        android:layout_below="@id/image"
        android:layout_toStartOf="@id/hours"
        android:layout_alignParentStart="true"
        android:gravity="center_horizontal"/>

    <TextView
        android:id="@+id/address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/address"
        android:padding="10dp"
        android:textSize="20sp"
        android:clickable="true"
        android:focusable="true"
        android:onClick="onAddress"
        android:layout_below="@id/image"
        android:layout_toEndOf="@+id/hours"
        android:layout_alignParentEnd="true"
        android:gravity="center_horizontal"/>

    <TextView
        android:id="@+id/serviceVal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/servicesVal"
        android:textSize="18sp"
        android:padding="20dp"
        android:layout_below="@id/services"/>

    <TextView
        android:id="@+id/hoursVal1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hoursVal1"
        android:textSize="18sp"
        android:padding="20dp"
        android:layout_below="@id/hours"
        android:visibility="invisible"/>

    <TextView
        android:id="@+id/hoursVal2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hoursVal2"
        android:textSize="18sp"
        android:padding="20dp"
        android:layout_below="@id/hours"
        android:layout_toEndOf="@id/hoursVal1"
        android:visibility="invisible"/>

    <TextView
        android:id="@+id/addressVal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addressVal"
        android:textSize="18sp"
        android:padding="20dp"
        android:layout_below="@id/address"
        android:visibility="invisible"/>

</RelativeLayout>
</ScrollView>